--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Scripts\Weapon.cs" />
     <Compile Include="Assets\Scripts\Util.cs" />
     <Compile Include="Assets\Scripts\Elevator.cs" />
+    <Compile Include="Assets\Scripts\SprayGuy.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
